# uvt

mn/: Pipfile  config.sh  crout.py  derivata_1_diferenta_centrate.ipynb  doolittle.py  error.py  formula_trapezului.ipynb  gaussJacobi.ipynb  gaussJordan.py  gaussPivotTotal.py  gaussSeidel.ipynb  gaussSemipivot.py  laborator2_ex3_b.py  lagrange.ipynb  neville.ipynb  newton.ipynb  simpson_1_3.ipynb  simpson_3_8.ipynb  splineCubic.ipynb  splineLiniare.ipynb  splinePatratic.ipynb  swap.py
pi/: Pipfile  pi.ipynb  tema4.ipynb
sc/lab2/: Makefile  app  main.c
sc/lab2/resources/: d_input.txt  e_input.txt
sc/lab2/source/: main.c
sc/laborator_5/: notite.txt
sc/proiect/: .clang-format  CMakeLists.txt
sc/proiect/includes/: Algorithms.hpp  AlgorithmsSuite.hpp  Constants.hpp  DES.hpp  IOConfig.hpp  Operations.hpp  OptionParser.hpp
sc/proiect/includes/aes/: AES.hpp  Structures.hpp  Versions.hpp
sc/proiect/includes/des/: DES.hpp  (+1 more)
sc/proiect/resources/: outputFile  outputFile2  testInput
sc/proiect/source/: CMakeLists.txt  DES.cpp  OptionParser.cpp  main.cpp
sc/proiect/source/aes/: AES.cpp
sc/proiect/source/des/: DES.cpp
sc/proiect/source/rsa/: RSA.cpp
sc/tema1/: decrypted.txt  encrypted  lab1Cezar
sc/tema2/: .gitignore  outputFile  sha1  sha1.cpp  sha1.h
siia/: config.sh
siia/laborator_2/: 2_0_FullAnalysisExample.ipynb  2_1_Sklearn_tutorial.ipynb  2_2_Classification_end_to_end.ipynb
siia/laborator_3/: 3_0_Linear_models.ipynb  3_2_Trees.ipynb
siia/laborator_3/.ipynb_checkpoints/: 3_0_Linear_models-checkpoint.ipynb  3_1_SVM-checkpoint.ipynb
(+2 files in other folders)
